<resources>
    <string name="app_name">مفروشات المحلة</string>
    <string name="already_have">Already have an Account? Login</string>
    <string name="join_now">Join Now</string>
    <string name="title_activity_home" translatable="false">HomeActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="menu_tools" translatable="false">Tools</string>
    <string name="menu_share" translatable="false">Share</string>
    <string name="menu_send" translatable="false">Send</string>
    <string name="totalPrice">Total Price</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="price">Price</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="please_confirm">Please confirm your Shipment Details</string>
    <string name="congraorder">congratolation your final order has been placed successfully soon you will recive your order at your door, soon it will be verified</string>
    <string name="check_new_orders">Check New Orders</string>
    <string name="logout">Logout</string>
    <string name="maintain_product">Maintain Product</string>
    <string name="price_desc">Price Befor Descount</string>
    <string name="price_product">Product Price...</string>
    <string name="descount">Descount</string>
    <string name="details">Details product</string>
    <string name="delet">Delete</string>
    <string name="favourites">Favourites</string>
    <string name="orders">Orders</string>
    <string name="cart">Cart</string>
    <string name="phone_Number">Phone Number</string>
    <string name="not_admin">I\'m not an Admin?</string>
    <string name="admin">I\'m an Admin?</string>
    <string name="forget">Forget Password?</string>
    <string name="remember_me">Remember me</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="create">Create Account</string>
    <string name="add_cart">Add To Cart</string>
    <string name="login">Login</string>
    <string name="settings">settings</string>
    <string name="confirm">Confirm</string>
</resources>
