<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_cart"
            android:icon="@drawable/cart"
            android:title="@string/cart" />
        <item android:id="@+id/nav_orders"
            android:icon="@drawable/orders"
            android:title="@string/orders"/>
        <item android:id="@+id/nav_favourites"
            android:icon="@drawable/heart_red"
            android:title="@string/favourites"/>
        <item android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings"/>
        <item android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout"/>

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
