<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MyCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="16dp"
    android:layout_margin="5dp"
    app:cardElevation="15dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    tools:context=".AdminMaintainProductActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/product_image_maintain"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:textAlignment="center"
            android:id="@+id/product_name_maintain"
            style="@style/MyTextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:hint="@string/product_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_image_maintain" />

        <EditText
            android:id="@+id/product_description_maintain"
            style="@style/MyTextViewSubtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:hint="@string/details"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_name_maintain" />

        <EditText
            android:textColor="@android:color/holo_red_dark"
            android:id="@+id/product_descount_maintain"
            style="@style/MyTextViewSubtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="15dp"
            android:hint="@string/price_desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/product_price_maintain"
            app:layout_constraintTop_toBottomOf="@+id/product_description_maintain" />

        <EditText
            android:id="@+id/product_price_maintain"
            style="@style/MyTextViewSubtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:hint="@string/price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_description_maintain" />


        <Button
            android:id="@+id/btnShare_maintain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Apply changes"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/buttons"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/delet_product"
            app:layout_constraintTop_toBottomOf="@+id/product_price_maintain" />

        <Button

            android:id="@+id/delet_product"
            android:text="@string/delet"
            android:textColor="@android:color/white"
            android:background="@drawable/buttons"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnShare_maintain"
            app:layout_constraintTop_toBottomOf="@+id/product_price_maintain">

        </Button>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>