<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminCategoryActivity">

    <TextView
        android:id="@+id/slogan_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="Add New Product"
        android:textAlignment="center"
        android:textSize="26sp"
        android:textStyle="bold"
        />



    <LinearLayout
        android:id="@+id/linear1_category_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/slogan_category"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="45dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <ImageView
            android:id="@+id/bigbed"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/bigbed"
            />

        <ImageView
            android:id="@+id/fota"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/fota"
            android:layout_margin="5dp"
            />

        <ImageView
            android:id="@+id/mafrsh"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/mafrsh"
            />

        <ImageView
            android:id="@+id/batanya"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:src="@drawable/batanya"
            android:layout_margin="7dp"
            />

    </LinearLayout>



    <LinearLayout
        android:id="@+id/linear2_category_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear1_category_layout"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="45dp">


        <ImageView
            android:id="@+id/accs"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:src="@drawable/accs"
            />

        <ImageView
            android:id="@+id/rop"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/rop"
            android:layout_margin="5dp"
            />


    </LinearLayout>


    <Button
        android:id="@+id/check_orders_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/buttons"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/check_new_orders"
        android:textColor="@android:color/white"
        android:textSize="26sp"
        android:layout_above="@id/admin_logout_btn"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textAllCaps="false"
        />
    <Button
        android:id="@+id/admin_logout_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/buttons"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/logout"
        android:textColor="@android:color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textAllCaps="false"
        />
    <Button
        android:id="@+id/maintain_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/buttons"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/maintain_product"
        android:textColor="@android:color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:layout_above="@id/check_orders_btn"
        />

    <Button
        android:id="@+id/code_btn_admin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/buttons"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp"
        android:text="Codes"
        android:textColor="@android:color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:layout_above="@id/maintain_btn"
        />


</RelativeLayout>